@@ -1,0 +1,1 @@
+cdecl | /dev/null | -xc++ | declare x as inline int | 0
