@@ -1,0 +1,1 @@
+cdecl | /dev/null | | declare x as inline int | 65
