@@ -1,0 +1,1 @@
+cdecl | /dev/null | -xc++ | explain inline int x | 0
