@@ -1,0 +1,1 @@
+cdecl | /dev/null | | explain inline int x | 65
